tests/sksl/errors/DuplicateOutput.dsl.glsl
### Compilation failed:

error: out location=0, index=0 is reserved for sk_FragColor

1 error
